Добавлено разметку декоративных елементов jpg

--- a/index.html
+++ b/index.html
@@ -71,52 +71,52 @@
         <div class="container">
           <h2 hidden>О нас</h2>
           <ul class="about-us-list list">
-            <li class="about-us-list-item">
-              <img
+            <li class="about-us-list-item icon-antenna">
+              <!-- <img
                 src="./images/about-us/antenna.svg"
                 alt="Антена"
                 width="70"
                 height="70"
-              />
+              /> -->
               <h3 class="about-us-titles">Внимание к деталям</h3>
               <p class="about-us-texts">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="about-us-list-item">
-              <img
+            <li class="about-us-list-item icon-clock">
+              <!-- <img
                 src="./images/about-us/clock.svg"
                 alt="Часы"
                 width="70"
                 height="70"
-              />
+              /> -->
               <h3 class="about-us-titles">Пунктуальность</h3>
               <p class="about-us-texts">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="about-us-list-item">
-              <img
+            <li class="about-us-list-item icon-diagram">
+              <!-- <img
                 src="./images/about-us/diagram.svg"
                 alt="Диаграмма"
                 width="70"
                 height="70"
-              />
+              /> -->
               <h3 class="about-us-titles">Планирование</h3>
               <p class="about-us-texts">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="about-us-list-item">
-              <img
+            <li class="about-us-list-item icon-astronaut">
+              <!-- <img
                 src="./images/about-us/astronaut.svg"
                 alt="Астронавт"
                 width="70"
                 height="70"
-              />
+              /> -->
               <h3 class="about-us-titles">Современные технологии</h3>
               <p class="about-us-texts">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -367,16 +367,32 @@
           <b class="call">присоединяйтесь</b>
           <ul class="social-links list">
             <li class="social-links-item">
-              <a href="" aria-label="иконка твиттера"></a>
+              <a
+                class="social-links-icon icon-instagram"
+                href=""
+                aria-label="иконка инстаграма"
+              ></a>
             </li>
             <li class="social-links-item">
-              <a href="" aria-label="иконка фейсбука"></a>
+              <a
+                class="social-links-icon icon-twitter"
+                href=""
+                aria-label="иконка твиттера"
+              ></a>
             </li>
             <li class="social-links-item">
-              <a href="" aria-label="иконка линкедина"></a>
+              <a
+                class="social-links-icon icon-facebook"
+                href=""
+                aria-label="иконка фейсбука"
+              ></a>
             </li>
             <li class="social-links-item">
-              <a href="" aria-label="иконка инстаграма"></a>
+              <a
+                class="social-links-icon icon-linkedin"
+                href=""
+                aria-label="иконка линкедина"
+              ></a>
             </li>
           </ul>
         </div>
