Добавлено иконки, єфекты

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,9 @@
               >
             </li>
             <li class="navigation-list-li">
-              <a class="navigation-list-item link" href="./portfolio.html"
+              <a
+                class="navigation-list-item link headline"
+                href="./portfolio.html"
                 >Портфолио</a
               >
             </li>
