--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </a>
           <ul class="navigation-list list">
             <li class="navigation-list-li">
-              <a class="navigation-list-item link" href="./index.html"
+              <a class="navigation-list-item link headline" href="./index.html"
                 >Студия</a
               >
             </li>
@@ -43,13 +43,20 @@
                 class="header-mail-link link"
                 href="mailto:info@devstudio.com"
                 lang="en"
-                >info@devstudio.com</a
               >
+                <svg class="envelope-icon" width="16px" height="11px">
+                  <use href="./images/sprite.svg#envelope"></use>
+                </svg>
+                info@devstudio.com
+              </a>
             </li>
             <li class="header-address-list-item">
-              <a class="header-tel-link link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+              <a class="header-tel-link link" href="tel:+380961111111">
+                <svg class="envelope-icon" width="10px" height="15px">
+                  <use href="./images/sprite.svg#tel"></use>
+                </svg>
+                +38 096 111 11 11
+              </a>
             </li>
           </ul>
         </address>
@@ -71,52 +78,51 @@
         <div class="container">
           <h2 hidden>О нас</h2>
           <ul class="about-us-list list">
-            <li class="about-us-list-item icon-antenna">
-              <!-- <img
-                src="./images/about-us/antenna.svg"
-                alt="Антена"
-                width="70"
-                height="70"
-              /> -->
+            <li class="about-us-list-item">
+              <div class="about-us-background">
+                <svg width="70" height="70">
+                  <use href="./images/sprite.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="about-us-titles">Внимание к деталям</h3>
               <p class="about-us-texts">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="about-us-list-item icon-clock">
-              <!-- <img
-                src="./images/about-us/clock.svg"
-                alt="Часы"
-                width="70"
-                height="70"
-              /> -->
+            <li class="about-us-list-item">
+              <div class="about-us-background">
+                <svg width="70" height="70">
+                  <use href="./images/sprite.svg#clock"></use>
+                </svg>
+              </div>
+
               <h3 class="about-us-titles">Пунктуальность</h3>
               <p class="about-us-texts">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="about-us-list-item icon-diagram">
-              <!-- <img
-                src="./images/about-us/diagram.svg"
-                alt="Диаграмма"
-                width="70"
-                height="70"
-              /> -->
+            <li class="about-us-list-item">
+              <div class="about-us-background">
+                <svg width="70" height="70">
+                  <use href="./images/sprite.svg#diagram"></use>
+                </svg>
+              </div>
+
               <h3 class="about-us-titles">Планирование</h3>
               <p class="about-us-texts">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="about-us-list-item icon-astronaut">
-              <!-- <img
-                src="./images/about-us/astronaut.svg"
-                alt="Астронавт"
-                width="70"
-                height="70"
-              /> -->
+            <li class="about-us-list-item">
+              <div class="about-us-background">
+                <svg width="70" height="70">
+                  <use href="./images/sprite.svg#astronaut"></use>
+                </svg>
+              </div>
+
               <h3 class="about-us-titles">Современные технологии</h3>
               <p class="about-us-texts">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -176,17 +182,33 @@
               <h3 class="team-names-titles">Николай Кучеренко</h3>
               <p class="team-profession" lang="en">Product Designer</p>
               <ul class="social-links list">
-                <li class="social-links-item">
-                  <a href="" aria-label="иконка инстаграма"></a>
+                <li class="command-social-links-item">
+                  <a href="" aria-label="иконка инстаграма">
+                    <svg class="command-social-icon">
+                      <use href="./images/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-links-item">
-                  <a href="" aria-label="иконка твиттера"></a>
+                <li class="command-social-links-item">
+                  <a href="" aria-label="иконка твиттера">
+                    <svg class="command-social-icon">
+                      <use href="./images/sprite.svg#twitter"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-links-item">
-                  <a href="" aria-label="иконка фейсбука"></a>
+                <li class="command-social-links-item">
+                  <a href="" aria-label="иконка фейсбука">
+                    <svg class="command-social-icon">
+                      <use href="./images/sprite.svg#facebook"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-links-item">
-                  <a href="" aria-label="иконка линкедина"></a>
+                <li class="command-social-links-item">
+                  <a href="" aria-label="иконка линкедина">
+                    <svg class="command-social-icon">
+                      <use href="./images/sprite.svg#linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -200,17 +222,33 @@
               <h3 class="team-names-titles">Ольга Иванова</h3>
               <p class="team-profession" lang="en">Frontend Developer</p>
               <ul class="social-links list">
-                <li class="social-links-item">
-                  <a href="" aria-label="иконка инстаграма"></a>
+                <li class="command-social-links-item">
+                  <a href="" aria-label="иконка инстаграма">
+                    <svg class="command-social-icon">
+                      <use href="./images/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-links-item">
-                  <a href="" aria-label="иконка твиттера"></a>
+                <li class="command-social-links-item">
+                  <a href="" aria-label="иконка твиттера">
+                    <svg class="command-social-icon">
+                      <use href="./images/sprite.svg#twitter"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-links-item">
-                  <a href="" aria-label="иконка фейсбука"></a>
+                <li class="command-social-links-item">
+                  <a href="" aria-label="иконка фейсбука">
+                    <svg class="command-social-icon">
+                      <use href="./images/sprite.svg#facebook"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-links-item">
-                  <a href="" aria-label="иконка линкедина"></a>
+                <li class="command-social-links-item">
+                  <a href="" aria-label="иконка линкедина">
+                    <svg class="command-social-icon">
+                      <use href="./images/sprite.svg#linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -224,17 +262,33 @@
               <h3 class="team-names-titles">Андрей Шевченко</h3>
               <p class="team-profession" lang="en">Marketing</p>
               <ul class="social-links list">
-                <li class="social-links-item">
-                  <a href="" aria-label="иконка инстаграма"></a>
+                <li class="command-social-links-item">
+                  <a href="" aria-label="иконка инстаграма">
+                    <svg class="command-social-icon">
+                      <use href="./images/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-links-item">
-                  <a href="" aria-label="иконка твиттера"></a>
+                <li class="command-social-links-item">
+                  <a href="" aria-label="иконка твиттера">
+                    <svg class="command-social-icon">
+                      <use href="./images/sprite.svg#twitter"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-links-item">
-                  <a href="" aria-label="иконка фейсбука"></a>
+                <li class="command-social-links-item">
+                  <a href="" aria-label="иконка фейсбука">
+                    <svg class="command-social-icon">
+                      <use href="./images/sprite.svg#facebook"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-links-item">
-                  <a href="" aria-label="иконка линкедина"></a>
+                <li class="command-social-links-item">
+                  <a href="" aria-label="иконка линкедина">
+                    <svg class="command-social-icon">
+                      <use href="./images/sprite.svg#linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -248,17 +302,33 @@
               <h3 class="team-names-titles">Иван Николаев</h3>
               <p class="team-profession" lang="en">UI Designer</p>
               <ul class="social-links list">
-                <li class="social-links-item">
-                  <a href="" aria-label="иконка инстаграма"></a>
+                <li class="command-social-links-item">
+                  <a href="" aria-label="иконка инстаграма">
+                    <svg class="command-social-icon">
+                      <use href="./images/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-links-item">
-                  <a href="" aria-label="иконка твиттера"></a>
+                <li class="command-social-links-item">
+                  <a href="" aria-label="иконка твиттера">
+                    <svg class="command-social-icon">
+                      <use href="./images/sprite.svg#twitter"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-links-item">
-                  <a href="" aria-label="иконка фейсбука"></a>
+                <li class="command-social-links-item">
+                  <a href="" aria-label="иконка фейсбука">
+                    <svg class="command-social-icon">
+                      <use href="./images/sprite.svg#facebook"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="social-links-item">
-                  <a href="" aria-label="иконка линкедина"></a>
+                <li class="command-social-links-item">
+                  <a href="" aria-label="иконка линкедина">
+                    <svg class="command-social-icon">
+                      <use href="./images/sprite.svg#linkedin"></use>
+                    </svg>
+                  </a>
                 </li>
               </ul>
             </li>
@@ -272,58 +342,45 @@
           <ul class="clients-list list">
             <li class="clients-list-items">
               <a class="clients-link" href="">
-                <img
-                  src="./images/clients/logo1.svg"
-                  alt="Логотип компании"
-                  width="45"
-                  height="50"
-              /></a>
+                <svg class="clients-icon" width="45" height="50">
+                  <use href="./images/sprite.svg#logo1"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-list-items">
               <a class="clients-link" href="">
-                <img
-                  src="./images/clients/logo2.svg"
-                  alt="Логотип компании"
-                  width="40"
-                  height="52"
-              /></a>
+                <svg class="clients-icon" width="40" height="52">
+                  <use href="./images/sprite.svg#logo2"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-list-items">
               <a class="clients-link" href="">
-                <img
-                  src="./images/clients/logo3.svg"
-                  alt="Логотип компании"
-                  width="41"
-                  height="43"
-              /></a>
+                <svg class="clients-icon" width="41" height="43">
+                  <use href="./images/sprite.svg#logo3"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-list-items">
               <a class="clients-link" href="">
-                <img
-                  src="./images/clients/logo4.svg"
-                  alt="Логотип компании"
-                  width="80"
-                  height="42"
-              /></a>
+                <svg class="clients-icon" width="80" height="42">
+                  <use href="./images/sprite.svg#logo4"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-list-items">
               <a class="clients-link" href="">
-                <img
-                  src="./images/clients/logo5.svg"
-                  alt="Логотип компании"
-                  width="59"
-                  height="47"
-              /></a>
+                <svg class="clients-icon" width="59" height="47">
+                  <use href="./images/sprite.svg#logo5"></use>
+                </svg>
+              </a>
             </li>
             <li class="clients-list-items">
               <a class="clients-link" href="">
-                <img
-                  class="clients-img"
-                  src="./images/clients/logo6.svg"
-                  alt="Логотип компании"
-                  width="89"
-                  height="46"
-              /></a>
+                <svg class="clients-icon" width="89" height="46">
+                  <use href="./images/sprite.svg#logo6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -364,35 +421,51 @@
           </address>
         </div>
         <div class="footer-call">
-          <b class="call">присоединяйтесь</b>
+          <p class="call">присоединяйтесь</p>
           <ul class="social-links list">
             <li class="social-links-item">
               <a
-                class="social-links-icon icon-instagram"
+                class="social-links-background"
                 href=""
                 aria-label="иконка инстаграма"
-              ></a>
+              >
+                <svg class="social-links-icon">
+                  <use href="./images/sprite.svg#instagram"></use>
+                </svg>
+              </a>
             </li>
             <li class="social-links-item">
               <a
-                class="social-links-icon icon-twitter"
+                class="social-links-background"
                 href=""
                 aria-label="иконка твиттера"
-              ></a>
+              >
+                <svg class="social-links-icon">
+                  <use href="./images/sprite.svg#twitter"></use>
+                </svg>
+              </a>
             </li>
             <li class="social-links-item">
               <a
-                class="social-links-icon icon-facebook"
+                class="social-links-background"
                 href=""
                 aria-label="иконка фейсбука"
-              ></a>
+              >
+                <svg class="social-links-icon">
+                  <use href="./images/sprite.svg#facebook"></use>
+                </svg>
+              </a>
             </li>
             <li class="social-links-item">
               <a
-                class="social-links-icon icon-linkedin"
+                class="social-links-background"
                 href=""
                 aria-label="иконка линкедина"
-              ></a>
+              >
+                <svg class="social-links-icon">
+                  <use href="./images/sprite.svg#linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
