--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 href="mailto:info@devstudio.com"
                 lang="en"
               >
-                <svg class="envelope-icon" width="16px" height="11px">
+                <svg class="address-icons" width="16px" height="11px">
                   <use href="./images/sprite.svg#envelope"></use>
                 </svg>
                 info@devstudio.com
@@ -52,7 +52,7 @@
             </li>
             <li class="header-address-list-item">
               <a class="header-tel-link link" href="tel:+380961111111">
-                <svg class="envelope-icon" width="10px" height="15px">
+                <svg class="address-icons" width="10px" height="15px">
                   <use href="./images/sprite.svg#tel"></use>
                 </svg>
                 +38 096 111 11 11
@@ -183,28 +183,44 @@
               <p class="team-profession" lang="en">Product Designer</p>
               <ul class="social-links list">
                 <li class="command-social-links-item">
-                  <a href="" aria-label="иконка инстаграма">
+                  <a
+                    class="command-social-link"
+                    href=""
+                    aria-label="иконка инстаграма"
+                  >
                     <svg class="command-social-icon">
                       <use href="./images/sprite.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="command-social-links-item">
-                  <a href="" aria-label="иконка твиттера">
+                  <a
+                    class="command-social-link"
+                    href=""
+                    aria-label="иконка твиттера"
+                  >
                     <svg class="command-social-icon">
                       <use href="./images/sprite.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="command-social-links-item">
-                  <a href="" aria-label="иконка фейсбука">
+                  <a
+                    class="command-social-link"
+                    href=""
+                    aria-label="иконка фейсбука"
+                  >
                     <svg class="command-social-icon">
                       <use href="./images/sprite.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="command-social-links-item">
-                  <a href="" aria-label="иконка линкедина">
+                  <a
+                    class="command-social-link"
+                    href=""
+                    aria-label="иконка линкедина"
+                  >
                     <svg class="command-social-icon">
                       <use href="./images/sprite.svg#linkedin"></use>
                     </svg>
