Добавлено кнопку в футер

--- a/index.html
+++ b/index.html
@@ -485,6 +485,15 @@
             </li>
           </ul>
         </div>
+        <div class="form">
+          <p class="call">подпишитесь на рассылку</p>
+          <button class="subscribe-button" type="button">
+            Подписаться
+            <svg class="icon-send" width="24px" height="24px">
+              <use href="./images/sprite.svg#airplane"></use>
+            </svg>
+          </button>
+        </div>
       </div>
     </footer>
   </body>
