--- a/portfolio.html
+++ b/portfolio.html
@@ -44,13 +44,20 @@
                 class="header-mail-link link"
                 href="mailto:info@devstudio.com"
                 lang="en"
-                >info@devstudio.com</a
               >
+                <svg class="address-icons" width="16px" height="11px">
+                  <use href="./images/sprite.svg#envelope"></use>
+                </svg>
+                info@devstudio.com
+              </a>
             </li>
             <li class="header-address-list-item">
-              <a class="header-tel-link link" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+              <a class="header-tel-link link" href="tel:+380961111111">
+                <svg class="address-icons" width="10px" height="15px">
+                  <use href="./images/sprite.svg#tel"></use>
+                </svg>
+                +38 096 111 11 11
+              </a>
             </li>
           </ul>
         </address>
@@ -333,6 +340,15 @@
               <a href="" aria-label="иконка инстаграма"></a>
             </li>
           </ul>
+        </div>
+        <div class="form">
+          <p class="call">подпишитесь на рассылку</p>
+          <button class="subscribe-button" type="button">
+            Подписаться
+            <svg class="icon-send" width="24px" height="24px">
+              <use href="./images/sprite.svg#airplane"></use>
+            </svg>
+          </button>
         </div>
       </div>
     </footer>
