Добавлено иконки у футер портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -325,19 +325,51 @@
           </address>
         </div>
         <div class="footer-call">
-          <b class="call">присоединяйтесь</b>
+          <p class="call">присоединяйтесь</p>
           <ul class="social-links list">
             <li class="social-links-item">
-              <a href="" aria-label="иконка твиттера"></a>
+              <a
+                class="social-links-background"
+                href=""
+                aria-label="иконка инстаграма"
+              >
+                <svg class="social-links-icon">
+                  <use href="./images/sprite.svg#instagram"></use>
+                </svg>
+              </a>
             </li>
             <li class="social-links-item">
-              <a href="" aria-label="иконка фейсбука"></a>
+              <a
+                class="social-links-background"
+                href=""
+                aria-label="иконка твиттера"
+              >
+                <svg class="social-links-icon">
+                  <use href="./images/sprite.svg#twitter"></use>
+                </svg>
+              </a>
             </li>
             <li class="social-links-item">
-              <a href="" aria-label="иконка линкедина"></a>
+              <a
+                class="social-links-background"
+                href=""
+                aria-label="иконка фейсбука"
+              >
+                <svg class="social-links-icon">
+                  <use href="./images/sprite.svg#facebook"></use>
+                </svg>
+              </a>
             </li>
             <li class="social-links-item">
-              <a href="" aria-label="иконка инстаграма"></a>
+              <a
+                class="social-links-background"
+                href=""
+                aria-label="иконка линкедина"
+              >
+                <svg class="social-links-icon">
+                  <use href="./images/sprite.svg#linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
